--- a/home.html
+++ b/home.html
@@ -7,6 +7,10 @@
   <body>
     <h1>MY PORTFOLIO
     </h1>
-    <p>This is a small demo</p>
+    <p>This is a small demo of my potfolio</p>
+    <p><b>About Me</b><br>
+    I am N.Sai Kiran a B.Tech student pusrsuing 3rd year in Computer Science and Engineering at <link href="https://www.sseptp.org">SSE</p>link>
+    <center><b>Hobbies</b></center>
+    My hobbies are playing videos games,listening to music,drawing cartoons</p>
   </body>
 </html>
