--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </h1>
     <p>This is a small demo of my potfolio</p>
     <p><b>About Me</b><br>
-    I am N.Sai Kiran a B.Tech student pusrsuing 3rd year in Computer Science and Engineering at <link href="https://www.sseptp.org">SSE</p>link>
-    <center><b>Hobbies</b></center>
+    I am N.Sai Kiran a B.Tech student pusrsuing 3rd year in Computer Science and Engineering at <link href="https://www.sseptp.org">SSE</p></link>
+    <b>Hobbies</b>
     My hobbies are playing videos games,listening to music,drawing cartoons</p>
   </body>
 </html>
