--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </h1>
     <p>This is a small demo of my potfolio</p>
     <p><b>About Me</b><br>
-    I am N.Sai Kiran a B.Tech student pusrsuing 3rd year in Computer Science and Engineering at <link href="https://www.sseptp.org">SSE</p></link>
+    I am N.Sai Kiran a B.Tech student pusrsuing 3rd year in Computer Science and Engineering at <a href="https://www.sseptp.org">SSE</a></p>
     <b>Hobbies</b>
     My hobbies are playing videos games,listening to music,drawing cartoons</p>
   </body>
